# mock_example

./: .gitignore  CMakeLists.txt  README.md  target.cpp  test_case.cpp
src/a/: a.cpp  a.h
src/b/: b.cpp  b.h
test/: CMakeLists.txt  mock.conf  test_case.cpp
